--- a/StonePaperScissor/app/src/main/res/values/strings.xml
+++ b/StonePaperScissor/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">StonePaperScissor</string>
+    <string name="instructions">
+        Rules:-\n
+        1. Rock wins over Scissor.\n
+        2. Paper wins over Rock.\n
+        3. Scissor wins over Paper.\n\n
+        Winner:-\n
+        Whoever collects all three stars\n
+        first will be the winner.\n\n
+
+        Best of luck...
+    </string>
 </resources>
